<?xml version="1.0"?>
<package format="2">
  <name>apf_pathplanner_tutorial</name>
  <version>0.0.0</version>
  <description>The apf_pathplanner_tutorial package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <exec_depend>interactive_markers</exec_depend>
  <build_depend>potbot_lib</build_depend>
</package>
